Add GUI to chatbot using JavaFX